@@ -1,3 +1,8 @@
+2002-06-11  Masatake YAMATO  <yamato@redhat.com>
+
+	* exception.h, input.h, output.h and types.h: Added
+	extern "C" {} for C++ clinets.
+
 2002-06-09  Masatake YAMATO  <yamato@redhat.com>
 
 	* autotrace.c (make_string): New macro.
